Initial commit of project

--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
                   <img src="assets/img/profile/profile-square-3.webp" class="img-fluid" alt="">
                   <div class="status-indicator"></div>
                 </div>
-                <h3>Jordan Mitchell</h3>
-                <span class="role">Full Stack Developer</span>
+                <h3>Shivam Singh</h3>
+                <span class="role">Photographer</span>
                 <div class="rating">
                   <i class="bi bi-star-fill"></i>
                   <i class="bi bi-star-fill"></i>
