made all basic changes

--- a/index.html
+++ b/index.html
@@ -86,18 +86,18 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-      <img src="assets/img/profile/profile-bg-5.webp" alt="" data-aos="fade-in">
+      <img src="assets/img/profile/shivam07.png" alt="" data-aos="fade-in">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <div class="row justify-content-center">
           <div class="col-lg-8 text-center">
             <h2>Hi, I'm Shivam Singh</h2>
-            <p>I'm a <span class="typed" data-typed-items="Graphic Designer, Photographer,Video Editor"></span><span class="typed-cursor" aria-hidden="true"></span></p>
+            <p>I'm a <span class="typed" data-typed-items="Editor,Photographer,Cinematographer"></span><span class="typed-cursor" aria-hidden="true"></span></p>
             <div class="social-links">
-              <a href="#"><i class="bi bi-twitter-x"></i></a>
-              <a href="#"><i class="bi bi-facebook"></i></a>
-              <a href="#"><i class="bi bi-instagram"></i></a>
-              <a href="#"><i class="bi bi-linkedin"></i></a>
+              <!-- <a href="#"><i class="bi bi-twitter-x"></i></a>
+              <a href="#"><i class="bi bi-facebook"></i></a> -->
+              <a href="https://www.instagram.com/shivam_08u/"><i class="bi bi-instagram"></i></a>
+              <a href="https://www.linkedin.com/in/shivam-singh-059980257/"><i class="bi bi-linkedin"></i></a>
             </div>
           </div>
         </div>
@@ -111,8 +111,8 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <span class="subtitle">About Me</span>
-        <h2>About Me</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium totam rem aperiam</p>
+        <!-- <h2>About Me</h2>
+        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium totam rem aperiam</p> -->
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -122,34 +122,34 @@
             <div class="profile-card">
               <div class="profile-header">
                 <div class="profile-avatar">
-                  <img src="assets/img/profile/profile-square-3.webp" class="img-fluid" alt="">
+                  <img src="assets/img/profile/hero2.jpeg" class="img-fluid" alt="">
                   <div class="status-indicator"></div>
                 </div>
                 <h3>Shivam Singh</h3>
                 <span class="role">Photographer</span>
-                <div class="rating">
+                <!-- <div class="rating">
                   <i class="bi bi-star-fill"></i>
                   <i class="bi bi-star-fill"></i>
                   <i class="bi bi-star-fill"></i>
                   <i class="bi bi-star-fill"></i>
                   <i class="bi bi-star-half"></i>
                   <span>4.8</span>
-                </div>
+                </div> -->
               </div>
 
               <div class="profile-stats">
                 <div class="stat-item">
-                  <h4>156</h4>
+                  <h4>49</h4>
                   <p>Projects</p>
                 </div>
                 <div class="stat-item">
-                  <h4>8+</h4>
+                  <h4>2+</h4>
                   <p>Years</p>
                 </div>
-                <div class="stat-item">
+                <!-- <div class="stat-item">
                   <h4>42</h4>
                   <p>Awards</p>
-                </div>
+                </div> -->
               </div>
 
               <div class="profile-actions">
@@ -158,10 +158,8 @@
               </div>
 
               <div class="social-connect">
-                <a href="#"><i class="bi bi-linkedin"></i></a>
-                <a href="#"><i class="bi bi-github"></i></a>
-                <a href="#"><i class="bi bi-twitter"></i></a>
-                <a href="#"><i class="bi bi-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/shivam-singh-059980257/"><i class="bi bi-linkedin"></i></a>
+                <a href="https://www.instagram.com/shivam_08u/"><i class="bi bi-instagram"></i></a>
               </div>
             </div>
           </div>
@@ -171,16 +169,17 @@
               <div class="bio-section">
                 <div class="section-tag">About Me</div>
                 <h2>Transforming Ideas into Digital Reality</h2>
-                <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi.</p>
-                <p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.</p>
+                <p>A passionate and self-driven content creator with hands-on experience in video editing, videography, and photography. Currently working at Amass Skill Ventures, I aim to contribute to innovative visual storytelling and content strategies while further developing my creative and technical skills in a dynamic media environment.</p>
+                <!-- <p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.</p> -->
               </div>
+
 
               <div class="details-grid">
                 <div class="detail-item" data-aos="fade-up" data-aos-delay="250">
                   <i class="bi bi-briefcase"></i>
                   <div class="detail-content">
                     <span>Experience</span>
-                    <strong>8+ Years</strong>
+                    <strong>2+ Years</strong>
                   </div>
                 </div>
 
@@ -188,7 +187,7 @@
                   <i class="bi bi-mortarboard"></i>
                   <div class="detail-content">
                     <span>Degree</span>
-                    <strong>Master of Science</strong>
+                    <strong>Bachelor of Journalism and Mass Communication</strong>
                   </div>
                 </div>
 
@@ -196,7 +195,7 @@
                   <i class="bi bi-geo-alt"></i>
                   <div class="detail-content">
                     <span>Based In</span>
-                    <strong>Portland, OR</strong>
+                    <strong>Delhi, India</strong>
                   </div>
                 </div>
 
@@ -204,7 +203,7 @@
                   <i class="bi bi-envelope"></i>
                   <div class="detail-content">
                     <span>Email</span>
-                    <strong>contact@example.com</strong>
+                    <strong>singhshivam4788@gmail.com</strong>
                   </div>
                 </div>
 
@@ -212,7 +211,7 @@
                   <i class="bi bi-phone"></i>
                   <div class="detail-content">
                     <span>Phone</span>
-                    <strong>+1 (555) 234-5678</strong>
+                    <strong>+919318463756</strong>
                   </div>
                 </div>
 
@@ -227,12 +226,12 @@
 
               <div class="skills-showcase" data-aos="fade-up" data-aos-delay="250">
                 <div class="section-tag">Core Skills</div>
-                <h3>Technical Proficiency</h3>
+                <!-- <h3>Technical Proficiency</h3> -->
 
                 <div class="skills-list skills-animation">
                   <div class="skill-item">
                     <div class="skill-info">
-                      <span class="skill-name">React &amp; Next.js</span>
+                      <span class="skill-name">Video Production</span>
                       <span class="skill-percent">95%</span>
                     </div>
                     <div class="progress">
@@ -242,7 +241,17 @@
 
                   <div class="skill-item">
                     <div class="skill-info">
-                      <span class="skill-name">Node.js &amp; Express</span>
+                      <span class="skill-name">Videography &amp; Cinematography</span>
+                      <span class="skill-percent">80%</span>
+                    </div>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                  </div>
+
+                  <div class="skill-item">
+                    <div class="skill-info">
+                      <span class="skill-name">Editing </span>
                       <span class="skill-percent">90%</span>
                     </div>
                     <div class="progress">
@@ -252,27 +261,17 @@
 
                   <div class="skill-item">
                     <div class="skill-info">
-                      <span class="skill-name">UI/UX &amp; Figma</span>
-                      <span class="skill-percent">88%</span>
+                      <span class="skill-name">Designing</span>
+                      <span class="skill-percent">80%</span>
                     </div>
                     <div class="progress">
-                      <div class="progress-bar" role="progressbar" aria-valuenow="88" aria-valuemin="0" aria-valuemax="100"></div>
+                      <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                   </div>
 
                   <div class="skill-item">
                     <div class="skill-info">
-                      <span class="skill-name">MongoDB &amp; PostgreSQL</span>
-                      <span class="skill-percent">85%</span>
-                    </div>
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                  </div>
-
-                  <div class="skill-item">
-                    <div class="skill-info">
-                      <span class="skill-name">Docker &amp; AWS</span>
+                      <span class="skill-name">Content Creation</span>
                       <span class="skill-percent">80%</span>
                     </div>
                     <div class="progress">
@@ -295,8 +294,8 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <span class="subtitle">Resume</span>
-        <h2>Resume</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium totam rem aperiam</p>
+        <!-- <h2>Resume</h2>
+        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium totam rem aperiam</p> -->
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -382,11 +381,11 @@
                     </div>
                     <div class="timeline-content">
                       <div class="education-meta">
-                        <span class="year-range">2015 - 2017</span>
+                        <span class="year-range">2025 - 2027</span>
                         <span class="degree-level">Masters</span>
                       </div>
-                      <h4>Master of Design Innovation</h4>
-                      <p class="institution">Institute of Creative Arts</p>
+                      <h4>M.A in Journalism and Digital Media(ODL)</h4>
+                      <p class="institution">IGNOU</p>
                       <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod tempor incididunt ut labore.</p>
                       <div class="achievement">
                         <i class="bi bi-award"></i>
@@ -401,11 +400,11 @@
                     </div>
                     <div class="timeline-content">
                       <div class="education-meta">
-                        <span class="year-range">2011 - 2015</span>
+                        <span class="year-range">2022 - 2025</span>
                         <span class="degree-level">Bachelor</span>
                       </div>
-                      <h4>Bachelor of Fine Arts</h4>
-                      <p class="institution">Creative Arts University</p>
+                      <h4>Bachelor of Journalism and Mass Communication</h4>
+                      <p class="institution">International Institute of Mass Media Communication</p>
                       <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                     </div>
                   </div>
@@ -422,17 +421,17 @@
                       <h4>Professional Certifications</h4>
                       <div class="certifications-list">
                         <div class="cert-item">
-                          <span class="cert-name">Advanced UX Research</span>
+                          <span class="cert-name">Graphic Design</span>
                           <span class="cert-year">2023</span>
                         </div>
-                        <div class="cert-item">
+                        <!-- <div class="cert-item">
                           <span class="cert-name">Design Leadership</span>
                           <span class="cert-year">2022</span>
                         </div>
                         <div class="cert-item">
                           <span class="cert-name">Digital Strategy</span>
                           <span class="cert-year">2021</span>
-                        </div>
+                        </div> -->
                       </div>
                     </div>
                   </div>
@@ -815,8 +814,8 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <span class="subtitle">Contact</span>
-        <h2>Contact</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium totam rem aperiam</p>
+        <!-- <h2>Contact</h2>
+        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium totam rem aperiam</p> -->
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -830,7 +829,7 @@
               </div>
               <div>
                 <h3>Address</h3>
-                <p>2847 Oak Street, San Francisco, CA 94102</p>
+                <p>Rani Bagh, Delhi, 110034, India</p>
               </div>
             </div>
 
@@ -840,7 +839,7 @@
               </div>
               <div>
                 <h3>Call Me</h3>
-                <p>+1 (555) 234-5678</p>
+                <p>+919318463756</p>
               </div>
             </div>
 
@@ -850,7 +849,7 @@
               </div>
               <div>
                 <h3>Email Me</h3>
-                <p>alex@example.com</p>
+                <p>singhshivam4788@gmail.com</p>
               </div>
             </div>
 
@@ -906,10 +905,10 @@
           </a>
           <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
           <div class="social-links d-flex mt-4">
-            <a href=""><i class="bi bi-twitter-x"></i></a>
-            <a href=""><i class="bi bi-facebook"></i></a>
-            <a href=""><i class="bi bi-instagram"></i></a>
-            <a href=""><i class="bi bi-linkedin"></i></a>
+            <!-- <a href=""><i class="bi bi-twitter-x"></i></a>
+            <a href=""><i class="bi bi-facebook"></i></a> -->
+            <a href="https://www.instagram.com/shivam_08u/"><i class="bi bi-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/shivam-singh-059980257/"><i class="bi bi-linkedin"></i></a>
           </div>
         </div>
 
@@ -937,11 +936,11 @@
 
         <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
           <h4>Contact Us</h4>
-          <p>A108 Adam Street</p>
-          <p>New York, NY 535022</p>
-          <p>United States</p>
-          <p class="mt-4"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-          <p><strong>Email:</strong> <span>info@example.com</span></p>
+          <p>Rani Bagh</p>
+          <p>Delhi, 110034</p>
+          <p>India</p>
+          <p class="mt-4"><strong>Phone:</strong> <span>+919318463756</span></p>
+          <p><strong>Email:</strong> <span>singhshivam4788@gmail.com</span></p>
         </div>
 
       </div>
