--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Index - Craftivo Bootstrap Template</title>
+  <title>Index - Shivam Bootstrap Template</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -28,8 +28,8 @@
   <link href="assets/css/main.css" rel="stylesheet">
 
   <!-- =======================================================
-  * Template Name: Craftivo
-  * Template URL: https://bootstrapmade.com/craftivo-bootstrap-portfolio-template/
+  * Template Name: Shivam
+  * Template URL: https://bootstrapmade.com/Shivam-bootstrap-portfolio-template/
   * Updated: Oct 04 2025 with Bootstrap v5.3.8
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
@@ -44,7 +44,7 @@
       <a href="index.html" class="logo d-flex align-items-center me-auto">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.webp" alt=""> -->
-        <h1 class="sitename">Craftivo</h1>
+        <h1 class="sitename">Shivam</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -143,7 +143,7 @@
                   <p>Projects</p>
                 </div>
                 <div class="stat-item">
-                  <h4>2+</h4>
+                  <h4>1.2</h4>
                   <p>Years</p>
                 </div>
                 <!-- <div class="stat-item">
@@ -168,7 +168,7 @@
             <div class="content-wrapper">
               <div class="bio-section">
                 <div class="section-tag">About Me</div>
-                <h2>Transforming Ideas into Digital Reality</h2>
+                <h2>Creating Digital Stories from Ideas</h2>
                 <p>A passionate and self-driven content creator with hands-on experience in video editing, videography, and photography. Currently working at Amass Skill Ventures, I aim to contribute to innovative visual storytelling and content strategies while further developing my creative and technical skills in a dynamic media environment.</p>
                 <!-- <p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.</p> -->
               </div>
@@ -179,7 +179,7 @@
                   <i class="bi bi-briefcase"></i>
                   <div class="detail-content">
                     <span>Experience</span>
-                    <strong>2+ Years</strong>
+                    <strong>1.2 Years</strong>
                   </div>
                 </div>
 
@@ -307,7 +307,7 @@
                 <div class="header-content">
                   <span class="section-badge">Experience</span>
                   <h2>Professional Journey</h2>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                  <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p> -->
                 </div>
               </div>
 
@@ -320,14 +320,17 @@
                     <div class="period-badge">Current</div>
                   </div>
                   <div class="card-body">
-                    <h3>Senior Creative Director</h3>
-                    <p class="company-name">Digital Innovation Labs</p>
-                    <span class="duration">2023 - Present</span>
-                    <p class="description">Ut enim ad minim veniam quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat duis aute.</p>
+                    <h3>Video Editor & Visual Content Creator</h3>
+                    <p class="company-name">Amass Skill Ventures</p>
+                    <span class="duration">2024 - Present</span>
+                    <p class="description">Shooting and editing videos for corporate training, educational content, marketing, and promotional use</p>
+                    <p class="description">Worked as Director of Photography (DOP) for company induction program videos, handling lighting, framing, and cinematography</p>
+                    <p class="description">Captured high-quality visuals during client visits, events, and industrial machine operations</p>
+                    <p class="description">Managed and organized course content, data, and media assets for smooth LMS delivery</p>
                     <div class="skills-tags">
                       <span class="skill-tag">Leadership</span>
-                      <span class="skill-tag">Strategy</span>
-                      <span class="skill-tag">Innovation</span>
+                      <span class="skill-tag">Creativity</span>
+                      <!-- <span class="skill-tag">Innovation</span> -->
                     </div>
                   </div>
                 </div>
@@ -339,14 +342,17 @@
                     </div>
                   </div>
                   <div class="card-body">
-                    <h3>Product Design Lead</h3>
-                    <p class="company-name">TechForward Solutions</p>
-                    <span class="duration">2020 - 2023</span>
-                    <p class="description">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium totam rem aperiam.</p>
+                    <h3>Assistant Director (Intern)</h3>
+                    <p class="company-name">Small Box Office</p>
+                    <span class="duration">July,2024 - September 2024</span>
+                    <p class="description">Assisted directors in shot planning, call sheet preparation, and shoot coordination</p>
+                    <p class="description">Contributed to short films and YouTube content across pre-production and live shoots</p>
+                    <p class="description">Content Creator (Video Editor, Videographer, Photographer)</p>
+                    
                   </div>
                 </div>
 
-                <div class="exp-card" data-aos="zoom-in" data-aos-delay="400">
+                <!-- <div class="exp-card" data-aos="zoom-in" data-aos-delay="400">
                   <div class="card-header">
                     <div class="company-logo">
                       <i class="bi bi-palette"></i>
@@ -358,7 +364,7 @@
                     <span class="duration">2017 - 2020</span>
                     <p class="description">Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                   </div>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
@@ -369,7 +375,7 @@
                 <div class="header-content">
                   <span class="section-badge">Education</span>
                   <h2>Academic Background</h2>
-                  <p>Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur vel illum.</p>
+                  <!-- <p>Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur vel illum.</p> -->
                 </div>
               </div>
 
@@ -452,7 +458,7 @@
       <div class="container section-title" data-aos="fade-up">
         <span class="subtitle">Services</span>
         <h2>Services</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium totam rem aperiam</p>
+        <p>We offer complete creative services including video production, video editing, cinematography, photography, and graphic design, delivering high-quality visuals that clearly communicate your message and strengthen your brand</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -461,10 +467,10 @@
           <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="100">
             <div class="service-item">
               <div class="icon-wrapper">
-                <i class="bi bi-palette"></i>
+                <i class="bi bi-camera-reels-fill"></i>
               </div>
-              <h4>Brand Identity</h4>
-              <p>Curabitur non nulla sit amet nisl tempus convallis quis ac lectus vivamus magna.</p>
+              <h4>Video Production</h4>
+              <p>Filming, editing, and post-processing</p>
               <a href="service-details.html" class="read-more">
                 <span>Explore</span>
                 <i class="bi bi-arrow-right"></i>
@@ -476,10 +482,10 @@
             <div class="service-item featured">
               <div class="featured-tag">Featured</div>
               <div class="icon-wrapper">
-                <i class="bi bi-layout-text-window-reverse"></i>
+                <i class="bi bi-window-fullscreen"></i>
               </div>
-              <h4>UI/UX Design</h4>
-              <p>Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui donec rutrum.</p>
+              <h4>Video Editing</h4>
+              <p>Proficient in Adobe Premiere Pro & Basic After Effects</p>
               <a href="service-details.html" class="read-more">
                 <span>Explore</span>
                 <i class="bi bi-arrow-right"></i>
@@ -490,10 +496,10 @@
           <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="300">
             <div class="service-item">
               <div class="icon-wrapper">
-                <i class="bi bi-code-slash"></i>
+                <i class="bi bi-camera-video-fill"></i>
               </div>
-              <h4>Development</h4>
-              <p>Praesent sapien massa convallis a pellentesque nec egestas non nisi cras ornare arcu.</p>
+              <h4>Cinematography</h4>
+              <p>Understanding of camera techniques and visual storytelling</p>
               <a href="service-details.html" class="read-more">
                 <span>Explore</span>
                 <i class="bi bi-arrow-right"></i>
@@ -504,10 +510,10 @@
           <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="400">
             <div class="service-item">
               <div class="icon-wrapper">
-                <i class="bi bi-phone"></i>
+                <i class="bi bi-camera-fill"></i>
               </div>
-              <h4>Mobile Apps</h4>
-              <p>Vivamus suscipit tortor eget felis porttitor volutpat quisque velit nisi pretium ut lacinia.</p>
+              <h4>Photography and Graphics</h4>
+              <p>Professional-grade photography skills for marketing and social media content</p>
               <a href="service-details.html" class="read-more">
                 <span>Explore</span>
                 <i class="bi bi-arrow-right"></i>
@@ -515,21 +521,21 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="100">
+          <!-- <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="100">
             <div class="service-item">
               <div class="icon-wrapper">
-                <i class="bi bi-megaphone"></i>
+                <i class="bi bi-palette-fill"></i>
               </div>
-              <h4>Digital Marketing</h4>
-              <p>Nulla porttitor accumsan tincidunt curabitur aliquet quam id dui posuere blandit mauris.</p>
+              <h4>Graphic Design</h4>
+              <p>Basic skills in Adobe Photoshop Basic knowledge of colour theory and layout design</p>
               <a href="service-details.html" class="read-more">
                 <span>Explore</span>
                 <i class="bi bi-arrow-right"></i>
               </a>
             </div>
-          </div>
+          </div> -->
 
-          <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="200">
+          <!-- <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="200">
             <div class="service-item">
               <div class="icon-wrapper">
                 <i class="bi bi-search"></i>
@@ -569,7 +575,7 @@
                 <i class="bi bi-arrow-right"></i>
               </a>
             </div>
-          </div>
+          </div> -->
 
         </div>
 
@@ -608,10 +614,10 @@
         <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
           <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="200">
             <li data-filter="*" class="filter-active">All Work</li>
-            <li data-filter=".filter-creative">Creative</li>
-            <li data-filter=".filter-digital">Digital</li>
-            <li data-filter=".filter-strategy">Strategy</li>
-            <li data-filter=".filter-development">Development</li>
+            <li data-filter=".filter-creative">Video Production</li>
+            <li data-filter=".filter-digital">Video Editing</li>
+            <li data-filter=".filter-strategy">Photography and Cinematography</li>
+            <li data-filter=".filter-development">Course Development</li>
           </ul>
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="300">
@@ -901,7 +907,7 @@
       <div class="row gy-4">
         <div class="col-lg-5 col-md-12 footer-about">
           <a href="index.html" class="logo d-flex align-items-center">
-            <span class="sitename">Craftivo</span>
+            <span class="sitename">Shivam</span>
           </a>
           <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
           <div class="social-links d-flex mt-4">
@@ -947,7 +953,7 @@
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">Craftivo</strong> <span>All Rights Reserved</span></p>
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">Shivam</strong> <span>All Rights Reserved</span></p>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you've purchased the pro version. -->
